--- a/app/src/main/res/layout/fragment_ssg_sag.xml
+++ b/app/src/main/res/layout/fragment_ssg_sag.xml
@@ -32,7 +32,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <RelativeLayout
+        <LinearLayout
                 android:visibility="gone"
                 tools:visibility="visible"
                 android:id="@+id/frag_ssg_sag_rl_end"
@@ -40,14 +40,15 @@
                 android:layout_height="0dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="48dp">
+                android:layout_marginBottom="48dp"
+                android:orientation="vertical"
+                android:gravity="center">
 
             <ImageView
+                    android:id="@+id/parent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/img_lunchtime"
-                    android:layout_above="@+id/frag_ssg_sag_tv_end_count"
-                    android:layout_centerHorizontal="true"/>
+                    android:src="@drawable/img_lunchtime"/>
             <TextView
                     android:id="@+id/frag_ssg_sag_tv_end_count"
                     android:layout_width="wrap_content"
@@ -58,18 +59,8 @@
                     android:lineHeight="20sp"
                     android:fontFamily="@font/noto_sans_kr_medium"
                     android:textAlignment="center"
-                    android:layout_above="@+id/frag_ssg_sag_cv_go_today_ssgsag"
-                    android:layout_centerHorizontal="true"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="48dp"/>
-
-            <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-
-            </RelativeLayout>
-
 
             <androidx.cardview.widget.CardView
                     android:id="@+id/frag_ssg_sag_cv_go_today_ssgsag"
@@ -77,10 +68,7 @@
                     android:layout_height="48dp"
                     app:cardBackgroundColor="@color/ssgsag"
                     app:cardCornerRadius="4dp"
-                    app:cardElevation="0dp"
-                    android:layout_marginBottom="122dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_alignParentBottom="true">
+                    app:cardElevation="0dp">
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -92,8 +80,7 @@
 
             </androidx.cardview.widget.CardView>
 
-
-        </RelativeLayout>
+        </LinearLayout>
 
 
         <LinearLayout
