--- a/app/src/main/res/layout/activity_calendar_detail.xml
+++ b/app/src/main/res/layout/activity_calendar_detail.xml
@@ -1024,11 +1024,13 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:gravity="center_vertical">
                 <ImageView
+                        android:id="@+id/act_cal_detail_iv_go_website"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_website"
                         android:layout_marginRight="3dp"/>
                 <TextView
+                        android:id="@+id/act_cal_detail_tv_go_website"
                         android:background="#656ef0"
                         android:text="웹사이트"
                         android:fontFamily="@font/noto_sans_kr_regular"
@@ -1036,8 +1038,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="14sp"
                         android:textColor="@color/white"
-                        android:gravity="center"
-                        webSiteText="@{vm.webUrl}" />
+                        android:gravity="center"/>
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
