--- a/app/src/main/res/layout/fragment_calendar_list.xml
+++ b/app/src/main/res/layout/fragment_calendar_list.xml
@@ -29,6 +29,7 @@
 
     <com.icoo.ssgsag_android.util.view.NonSwipeViewPager
             android:id="@+id/frag_cal_list_vp"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/frag_cal_list_tl"
