--- a/app/src/main/res/layout/fragment_calendar_list_page.xml
+++ b/app/src/main/res/layout/fragment_calendar_list_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -11,7 +12,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white">
-
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/frag_cal_list_page_cl_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:paddingBottom="8dp">
             <LinearLayout
                     android:id="@+id/frag_cal_list_page_ll_filter"
                     app:layout_constraintTop_toTopOf="parent"
@@ -85,21 +92,30 @@
 
 
             </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
             <androidx.recyclerview.widget.RecyclerView
                     android:background="@color/white"
                     android:id="@+id/frag_calendar_list_page_rv"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/frag_cal_list_page_ll_filter"
-                    android:layout_marginTop="8dp"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toBottomOf="@+id/frag_cal_list_page_cl_filter"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     android:paddingBottom="120dp"
                     android:clipToPadding="false" />
 
-            <LinearLayout
-                    android:id="@+id/frag_cal_list_page_ll_empty"
+            <androidx.constraintlayout.widget.ConstraintLayout
                     android:visibility="gone"
+                    tools:visibility="visible"
+                    android:id="@+id/frag_cal_list_page_cl_empty"
+                    android:background="@color/white"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toBottomOf="@id/frag_cal_list_page_cl_filter"
+                    app:layout_constraintBottom_toBottomOf="parent">
+
+            <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
@@ -120,6 +136,7 @@
                         android:text="저장된 추후 일정이 없습니다."
                         android:layout_marginTop="12dp" />
             </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
