--- a/app/src/main/res/layout/item_banner_image.xml
+++ b/app/src/main/res/layout/item_banner_image.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
                 name="banner"
-                type="com.icoo.ssgsag_android.data.model.review.Banner" />
+                type="com.icoo.ssgsag_android.data.model.ads.AdItem" />
     </data>
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
