--- a/app/src/main/res/layout/item_all_posters_card.xml
+++ b/app/src/main/res/layout/item_all_posters_card.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
                 name="poster"
-                type="com.icoo.ssgsag_android.data.model.poster.posterDetail.PosterDetail"/>
+                type="com.icoo.ssgsag_android.data.model.ads.AdItem"/>
     </data>
 <LinearLayout
         android:id="@+id/item_all_posters_card_ll_container"
@@ -24,8 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
-                android:scaleType="centerCrop"
-                app:allPosterCardGlideImg="@{poster.thumbPhotoUrl}"
+                allPosterCardGlideImg="@{poster.photoUrl}"
                 tools:src="@drawable/img_poster"/>
     </androidx.cardview.widget.CardView>
 
@@ -34,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             tools:text="대상홀딩스 FILM\nFESTIVAL 자원봉사"
+            android:text="@{poster.contentTitle}"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:textSize="14dp"
             android:textColor="@color/black_1"
@@ -42,7 +42,8 @@
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
         <TextView
                 android:layout_width="wrap_content"
@@ -50,7 +51,8 @@
                 android:textSize="10dp"
                 android:textColor="@color/grey_1"
                 android:letterSpacing="-0.02"
-                tools:text="6.1~6.12(수)" />
+                tools:text="6.1~6.12(수)"
+                android:text="@{poster.openEndDate}"/>
 
         <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -67,8 +69,7 @@
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:textColor="@color/white"
                     android:textSize="10dp"
-                    android:layout_marginHorizontal="3dp"
-                    android:layout_marginVertical="1dp"/>
+                    android:layout_marginHorizontal="3dp"/>
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
