--- a/app/src/main/res/layout/item_all_poster_collection.xml
+++ b/app/src/main/res/layout/item_all_poster_collection.xml
@@ -54,7 +54,7 @@
         </LinearLayout>
 
     </LinearLayout>
-    <androidx.viewpager.widget.ViewPager
+    <com.icoo.ssgsag_android.util.view.AutoHeightViewPager
             android:id="@+id/item_all_poster_collection_vp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
             app:layout_constraintTop_toBottomOf="@+id/item_all_poster_collection_ll_header"
             android:saveEnabled="false">
 
-    </androidx.viewpager.widget.ViewPager>
+    </com.icoo.ssgsag_android.util.view.AutoHeightViewPager>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
