--- a/app/src/main/res/layout/item_all_posters_card.xml
+++ b/app/src/main/res/layout/item_all_posters_card.xml
@@ -8,70 +8,75 @@
                 type="com.icoo.ssgsag_android.data.model.ads.AdItem"/>
     </data>
 <LinearLayout
-        android:id="@+id/item_all_posters_card_ll_container"
         android:layout_width="153dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@color/white">
-    <androidx.cardview.widget.CardView
-            android:id="@+id/item_all_posters_card_cv_poster"
-            android:layout_width="match_parent"
-            android:layout_height="218dp"
-            app:cardCornerRadius="4dp"
-            app:cardElevation="0dp">
-        <ImageView
-                android:id="@+id/item_all_posters_card_iv_poster"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                allPosterCardGlideImg="@{poster.photoUrl}"
-                tools:src="@drawable/img_poster"/>
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            tools:text="대상홀딩스 FILM\nFESTIVAL 자원봉사"
-            android:text="@{poster.contentTitle}"
-            android:fontFamily="@font/noto_sans_kr_medium"
-            android:textSize="14dp"
-            android:textColor="@color/black_1"
-            android:letterSpacing="-0.01"
-            android:lines="2"/>
     <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/item_all_posters_card_ll_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:orientation="vertical">
+        <androidx.cardview.widget.CardView
+                android:id="@+id/item_all_posters_card_cv_poster"
+                android:layout_width="match_parent"
+                android:layout_height="218dp"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="0dp">
+            <ImageView
+                    android:id="@+id/item_all_posters_card_iv_poster"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    allPosterCardGlideImg="@{poster.photoUrl}"
+                    tools:src="@drawable/img_poster"/>
+        </androidx.cardview.widget.CardView>
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="10dp"
-                android:textColor="@color/grey_1"
-                android:letterSpacing="-0.02"
-                tools:text="6.1~6.12(수)"
-                android:text="@{poster.openEndDate}"/>
-
-        <androidx.cardview.widget.CardView
+                android:layout_marginTop="4dp"
+                tools:text="대상홀딩스 FILM\nFESTIVAL 자원봉사"
+                android:text="@{poster.contentTitle}"
+                android:fontFamily="@font/noto_sans_kr_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black_1"
+                android:letterSpacing="-0.01"
+                android:lines="2"/>
+        <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/ssgsag"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="0dp"
-                android:layout_marginLeft="4dp">
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    posterDetailDday="@{poster.dday}"
-                    tools:text="d-day"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:textColor="@color/white"
                     android:textSize="10dp"
-                    android:layout_marginHorizontal="3dp"/>
-        </androidx.cardview.widget.CardView>
+                    android:textColor="@color/grey_1"
+                    android:letterSpacing="-0.02"
+                    tools:text="6.1~6.12(수)"
+                    android:text="@{poster.contentSubtitle}"/>
 
+            <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardBackgroundColor="@color/ssgsag"
+                    app:cardCornerRadius="3dp"
+                    app:cardElevation="0dp"
+                    android:layout_marginLeft="4dp">
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        posterDetailDday="@{poster.dday}"
+                        tools:text="d-day"
+                        android:fontFamily="@font/noto_sans_kr_regular"
+                        android:textColor="@color/white"
+                        android:textSize="10dp"
+                        android:layout_marginHorizontal="3dp"/>
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
@@ -86,7 +91,8 @@
                 android:id="@+id/item_all_poster_card_rl_store"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/border_656ef0_4_thin">
+                android:background="@drawable/border_656ef0_4_thin"
+                rlVisibilityByIntR="@{poster.isSave}">
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -103,7 +109,8 @@
                 android:id="@+id/item_all_poster_card_rl_cancel"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/border_aaaaaa_4_thin">
+                android:background="@drawable/border_aaaaaa_4_thin"
+                rlVisibilityByInt="@{poster.isSave}">
             <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
