--- a/app/src/main/res/layout/fragment_all_poster.xml
+++ b/app/src/main/res/layout/fragment_all_poster.xml
@@ -24,16 +24,10 @@
                 android:orientation="vertical"
                 android:paddingBottom="30dp">
 
-            <RelativeLayout
+            <pl.pzienowicz.autoscrollviewpager.AutoScrollViewPager
+                    android:id="@+id/frag_all_poster_asvp_banner"
                     android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:background="@color/grey_4">
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="롤링 배너"
-                        android:layout_centerInParent="true"/>
-            </RelativeLayout>
+                    android:layout_height="100dp"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
