--- a/app/src/main/res/layout/activity_all_category.xml
+++ b/app/src/main/res/layout/activity_all_category.xml
@@ -125,7 +125,7 @@
                 <ImageView
                         android:layout_width="186dp"
                         android:layout_height="186dp"
-                        imgResId="@drawable/img_empty"/>
+                        android:src="@drawable/img_empty"/>
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
