--- a/app/src/main/res/layout/activity_search_univ.xml
+++ b/app/src/main/res/layout/activity_search_univ.xml
@@ -134,23 +134,13 @@
                 />
     </androidx.cardview.widget.CardView>
 
-    <ProgressBar
-            android:visibility="@{vm.isProgress}"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="42dp"
-            app:layout_constraintTop_toBottomOf="@+id/act_search_univ_cl_search"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
     <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@+id/act_search_univ_cl_search"
                 android:layout_marginTop="42dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintStart_toStartOf="parent">
         <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -161,5 +151,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 </LinearLayout>
+    <ProgressBar
+            android:id="@+id/act_search_univ_pg"
+            android:visibility="@{vm.isProgress}"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="42dp"
+            app:layout_constraintTop_toBottomOf="@+id/act_search_univ_cl_search"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
