전체 뷰 수정
1. 메인 배너
2. 화면 갱신
3. 포스터 이미지 그림자

--- a/app/src/main/res/layout/navigation_ssgsag.xml
+++ b/app/src/main/res/layout/navigation_ssgsag.xml
@@ -25,7 +25,7 @@
                         android:layout_height="wrap_content"
                         android:text="전체"
                         android:textColor="@drawable/selector_text_color"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         android:textAlignment="center"
                         android:fontFamily="@font/noto_sans_kr_bold"
                         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         android:text="추천"
                         android:textColor="@drawable/selector_text_color"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         android:textAlignment="center"
                         android:fontFamily="@font/noto_sans_kr_bold"
                         android:layout_centerVertical="true"
