학교 추가 화면 수정
1. 입력 버튼에 값 입력 하지 않으면 하단 버튼 동작 안하도록
2. 입력 값에 공백 제거하도록
3. 입력 필드 줄바꿈 안되도록

--- a/app/src/main/res/layout/activity_register_univ.xml
+++ b/app/src/main/res/layout/activity_register_univ.xml
@@ -74,15 +74,16 @@
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
                     android:layout_marginTop="7dp"
-                    android:layout_marginBottom="9dp"
                     android:hint="대학교 이름"
+                    android:singleLine="true"
                     android:textColorHint="@color/grey_2"
                     android:textColor="@color/black_1"
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:background="@null"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:paddingBottom="9dp"/>
             <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
@@ -121,7 +122,8 @@
             android:layout_height="@dimen/bottom_btn_height"
             android:background="@color/grey_2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:clickable="false">
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
