--- a/app/src/main/res/layout/item_all_poster_category.xml
+++ b/app/src/main/res/layout/item_all_poster_category.xml
@@ -40,7 +40,7 @@
                        tools:textColor="@color/categoryActText"
                        android:fontFamily="@font/noto_sans_kr_bold"
                        android:letterSpacing="-0.02"
-                       android:textSize="14dp"
+                       android:textSize="@dimen/_14sp"
                        android:textAlignment="center"/>
            </LinearLayout>
 
