--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="toolbar_height">48dp</dimen>
     <dimen name="bottom_btn_height">56dp</dimen>
 
+    <dimen name="_14sp">14dp</dimen>
+
 </resources>
