viewPager Indicator 제작

--- a/app/src/main/res/layout/fragment_all_poster.xml
+++ b/app/src/main/res/layout/fragment_all_poster.xml
@@ -25,11 +25,30 @@
                 android:paddingBottom="30dp">
 
 
-
-            <pl.pzienowicz.autoscrollviewpager.AutoScrollViewPager
-                    android:id="@+id/frag_all_poster_asvp_banner"
+            <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"/>
+                    android:layout_height="wrap_content">
+
+                <pl.pzienowicz.autoscrollviewpager.AutoScrollViewPager
+                        android:id="@+id/frag_all_poster_asvp_banner"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+
+                <com.icoo.ssgsag_android.util.view.CircleAnimIndicator
+                        android:id="@+id/frag_all_poster_cai"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
