--- a/app/src/main/res/layout/item_all_posters_card.xml
+++ b/app/src/main/res/layout/item_all_posters_card.xml
@@ -34,22 +34,29 @@
                     tools:src="@drawable/img_poster"/>
         </androidx.cardview.widget.CardView>
 
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:orientation="vertical">
+
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                tools:text="대상홀딩스 FILM\nFESTIVAL 자원봉사"
-                android:text="@{poster.contentTitle}"
+                android:layout_marginTop="8dp"
                 android:fontFamily="@font/noto_sans_kr_medium"
-                android:textSize="14dp"
-                android:textColor="@color/black_1"
                 android:letterSpacing="-0.01"
-                android:lines="2"/>
+                android:maxLines="2"
+                android:text="@{poster.contentTitle}"
+                android:textColor="@color/black_1"
+                android:textSize="14dp"
+                tools:text="대상홀딩스\n세줄이 되면 어떻게 될까요? 정말정말 궁금하죠오오오?" />
+
         <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:layout_marginTop="4dp">
 
             <TextView
                     android:layout_width="wrap_content"
@@ -80,6 +87,7 @@
 
         </LinearLayout>
     </LinearLayout>
+    </LinearLayout>
 
     <androidx.cardview.widget.CardView
             android:id="@+id/item_all_posters_card_cv_store_btn"
@@ -93,7 +101,7 @@
                 android:id="@+id/item_all_poster_card_rl_store"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/border_656ef0_4_thin"
+                android:background="@drawable/border_656ef0_4"
                 rlVisibilityByIntR="@{poster.isSave}">
             <TextView
                     android:layout_width="wrap_content"
@@ -111,7 +119,7 @@
                 android:id="@+id/item_all_poster_card_rl_cancel"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/border_aaaaaa_4"
+                android:background="@drawable/border_cccccc_4"
                 rlVisibilityByInt="@{poster.isSave}">
             <LinearLayout
                     android:layout_width="wrap_content"
