--- a/app/src/main/res/layout/item_poster_detail.xml
+++ b/app/src/main/res/layout/item_poster_detail.xml
@@ -22,7 +22,7 @@
                     tools:text="항목"
                     android:textColor="#c8c8c8"
                     android:textSize="12sp"
-                    android:lineHeight="12sp"
+                    android:lineSpacingExtra="1sp"
                     android:fontFamily="@font/noto_sans_kr_regular"/>
             <TextView
                     android:layout_width="wrap_content"
@@ -30,7 +30,7 @@
                     android:layout_marginLeft="16dp"
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:textSize="12sp"
-                    android:lineHeight="20sp"
+                    android:lineSpacingExtra="1sp"
                     android:textColor="#505050"
                     android:text="@{posterDetail.contents}"
                     tools:text ="contents"/>
