--- a/app/src/main/res/layout/item_all_poster_event.xml
+++ b/app/src/main/res/layout/item_all_poster_event.xml
@@ -42,6 +42,7 @@
                         android:text="@{event.contentTitle}"
                         tools:text="튜터링 AI/미드패스 50% 할인! 두 줄 일시 여기까지 내려갑니다."
                         android:lines="2"
+                        android:ellipsize="end"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/item_all_poster_event_cv"
