[SSGSAG-187] 더미데이터 생성 및 뷰  완성
n/a

--- a/app/src/main/res/layout/item_all_posters_card.xml
+++ b/app/src/main/res/layout/item_all_posters_card.xml
@@ -28,7 +28,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:adjustViewBounds="true"
-                    allPosterCardGlideImg="@{poster.photoUrl}"
+                    topCropGlideImg="@{poster.photoUrl}"
                     tools:src="@drawable/img_poster"/>
         </androidx.cardview.widget.CardView>
 
