--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -5,13 +5,17 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
-    <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/white"
+        android:paddingBottom="@dimen/main_navi_height">
+    <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/frag_community_toolbar"
@@ -250,7 +254,8 @@
         <com.icoo.ssgsag_android.util.view.AutoHeightViewPager
                 android:id="@+id/item_ssgsag_news_avp"
                 android:layout_width="match_parent"
-                android:layout_height="200dp" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="22dp"/>
 
     </LinearLayout>
 
@@ -263,6 +268,12 @@
             android:overScrollMode="never"
             tools:listitem="@layout/item_community_collection"/>
 
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                app:layout_constraintTop_toBottomOf="@id/frag_community_rv"
+                app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
