--- a/app/src/main/res/layout/item_community_board.xml
+++ b/app/src/main/res/layout/item_community_board.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+                name="boardMain"
+                type="com.icoo.ssgsag_android.data.model.community.BoardMain" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:background="@drawable/border_eeeeee_8">
+        android:background="@drawable/border_eeeeee_8"
+        android:layout_marginBottom="12dp">
     <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -27,6 +34,7 @@
                     android:textColor="@color/grey_1"
                     android:letterSpacing="-0.02"
                     tools:text="취업/진로"
+                    android:text="@{boardMain.category}"
                     android:fontFamily="@font/noto_sans_kr_medium" />
 
             <TextView
@@ -37,6 +45,7 @@
                     android:letterSpacing="-0.02"
                     android:gravity="end"
                     tools:text="1시간 전"
+                    android:text="@{boardMain.time}"
                     android:layout_marginLeft="4dp"
                     android:fontFamily="@font/noto_sans_kr_regular"/>
         </LinearLayout>
@@ -48,6 +57,7 @@
                 android:textColor="@color/black_1"
                 android:letterSpacing="-0.01"
                 tools:text="게시판 제목 / 글자 수 20자 제한"
+                android:text="@{boardMain.title}"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:layout_marginTop="6dp"
                 android:maxLength="20"/>
@@ -58,7 +68,8 @@
                 android:textSize="12sp"
                 android:textColor="@color/grey_1"
                 android:letterSpacing="-0.02"
-                tools:text="글 본문 내용, text box 넘어갈시 말줄임필…" 
+                tools:text="글 본문 내용, text box 넘어갈시 말줄임필…"
+                android:text="@{boardMain.description}"
                 android:fontFamily="@font/noto_sans_kr_regular"
                 android:ellipsize="end"
                 android:layout_marginTop="6dp"/>
@@ -76,8 +87,10 @@
             android:layout_marginRight="12dp">
         <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                glideCenterCrop="@{boardMain.photo}"/>
     </androidx.cardview.widget.CardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
