--- a/app/src/main/res/layout/item_community_recruit.xml
+++ b/app/src/main/res/layout/item_community_recruit.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+                name="recruitTeam"
+                type="com.icoo.ssgsag_android.data.model.community.RecruitTeamMain" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:background="@drawable/border_eeeeee_8">
+        android:background="@drawable/border_eeeeee_8"
+        android:layout_marginBottom="12dp">
     <ImageView
             android:id="@+id/item_community_teammate_iv_profile"
             android:layout_width="48dp"
@@ -12,7 +19,8 @@
             android:layout_marginLeft="12dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            profileImg="@{recruitTeam.profileImg}"/>
     <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -34,7 +42,8 @@
                 android:maxLines="2"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:ellipsize="end"
-                tools:text="디자인 공모전 나가실 디자인과 구해요! 길어지면 어떻게 될까요 호호호호호" />
+                tools:text="디자인 공모전 나가실 디자인과 구해요! 길어지면 어떻게 될까요 호호호호호"
+                android:text="@{recruitTeam.title}"/>
 
         <LinearLayout
                 android:layout_width="wrap_content"
@@ -47,7 +56,9 @@
                     android:layout_height="wrap_content"
                     app:cardElevation="0dp"
                     app:cardCornerRadius="3dp"
-                    app:cardBackgroundColor="#14fe6d6d">
+                    app:cardBackgroundColor="#14fe6d6d"
+                    cvVisibilityByInt="@{recruitTeam.isRecruiting}"
+                    android:layout_marginRight="6dp">
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -55,7 +66,7 @@
                         android:textColor="#fe6d6d"
                         android:letterSpacing="-0.02"
                         android:gravity="center_horizontal"
-                        tools:text="모집 중"
+                        android:text="모집 중"
                         android:layout_marginTop="1dp"
                         android:layout_marginBottom="3dp"
                         android:layout_marginHorizontal="4dp"
@@ -64,16 +75,38 @@
 
             </androidx.cardview.widget.CardView>
 
-            <TextView
+            <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="10sp"
-                    android:textColor="@color/grey_2"
-                    android:letterSpacing="-0.02"
-                    tools:text="서울 | 공모전"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:layout_marginLeft="6dp"
-                    />
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/noto_sans_kr_regular"
+                        android:textColor="@color/grey_2"
+                        android:textSize="10sp"
+                        tools:text="서울"
+                        android:text="@{recruitTeam.area}"/>
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/noto_sans_kr_regular"
+                        android:textColor="@color/grey_2"
+                        android:textSize="10sp"
+                        android:text=" | " />
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:fontFamily="@font/noto_sans_kr_regular"
+                        android:textColor="@color/grey_2"
+                        android:textSize="10sp"
+                        tools:text="공모전"
+                        android:text="@{recruitTeam.category}"/>
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
@@ -89,3 +122,4 @@
             android:layout_marginRight="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
