--- a/app/src/main/res/layout/item_community_review.xml
+++ b/app/src/main/res/layout/item_community_review.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+                name="reviewMain"
+                type="com.icoo.ssgsag_android.data.model.community.ReviewMain" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:background="@drawable/border_eeeeee_8">
+        android:background="@drawable/border_eeeeee_8"
+        android:layout_marginBottom="12dp">
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,7 +30,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:cardCornerRadius="3dp"
-                    app:cardBackgroundColor="@color/grey_4">
+                    app:cardBackgroundColor="@color/grey_4"
+                    app:cardElevation="0dp">
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -35,7 +43,8 @@
                         android:fontFamily="@font/noto_sans_kr_medium"
                         android:layout_marginHorizontal="4dp"
                         android:layout_marginTop="1dp"
-                        android:layout_marginBottom="2dp"/>
+                        android:layout_marginBottom="2dp"
+                        android:text="@{reviewMain.category}"/>
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -46,7 +55,8 @@
                     android:letterSpacing="-0.02"
                     tools:text="IT 연합동아리 SOPT "
                     android:fontFamily="@font/noto_sans_kr_regular"
-                    android:layout_marginLeft="4dp"/>
+                    android:layout_marginLeft="4dp"
+                    android:text="@{reviewMain.name}"/>
         </LinearLayout>
 
         <TextView
@@ -60,6 +70,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:layout_marginTop="10dp"
+                android:text="@{reviewMain.title}"
                 />
         <LinearLayout
                 android:layout_width="match_parent"
@@ -67,14 +78,15 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="8dp"
                 android:gravity="center_vertical">
-            <me.zhanghai.android.materialratingbar.MaterialRatingBar
+            <RatingBar
+                    android:id="@+id/item_review_rb"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:mrb_progressTint="#FFD026"
-                    app:mrb_secondaryProgressTint="#FFD026"
-                    android:stepSize="1"
-                    style="@style/writeReviewRatingBar"
-                    app:mrb_fillBackgroundStars="false"/>
+                    style="@style/reviewRatingBar"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:stepSize="0.5"
+                    android:rating="@{reviewMain.score}"/>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -83,7 +95,8 @@
                     android:letterSpacing="-0.03"
                     tools:text="평점 3.9"
                     android:fontFamily="@font/noto_sans_kr_regular"
-                    android:layout_marginLeft="9dp"/>
+                    android:layout_marginLeft="9dp"
+                    reviewGrade="@{reviewMain.score}"/>
         </LinearLayout>
         <TextView
                 android:layout_width="wrap_content"
@@ -96,6 +109,7 @@
                 android:ellipsize="end"
                 tools:text="개발, 디자인, 기획 파트로 나누어져 있어서 협업 경험하는데 큰 도움 됨. 특히 방학에 앱잼이라는 3주짜리 해커톤을 하는데 너무 맘에 들었음 ㅎㅎ IT쪽에 충분히 관심있고 개발 욕심있다면 짱 추천 "
                 android:fontFamily="@font/noto_sans_kr_regular"
+                android:text="@{reviewMain.description}"
                 />
         <LinearLayout
                 android:layout_width="wrap_content"
@@ -109,7 +123,8 @@
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:textColor="@color/grey_2"
                     android:textSize="10sp"
-                    tools:text="작성자" />
+                    tools:text="작성자"
+                    android:text="@{reviewMain.userName}"/>
 
             <TextView
                     android:layout_width="wrap_content"
@@ -125,8 +140,10 @@
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:textColor="@color/grey_2"
                     android:textSize="10sp"
-                    tools:text="2019년 활동" />
+                    tools:text="2019년 활동"
+                    android:text="@{reviewMain.actDuration}"/>
         </LinearLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
