--- a/app/src/main/res/layout/item_community_ssgsag_news.xml
+++ b/app/src/main/res/layout/item_community_ssgsag_news.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools">
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+                name="news"
+                type="com.icoo.ssgsag_android.data.model.community.SsgSagNews" />
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="310dp"
-        android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
             android:id="@+id/item_community_ssgsag_news_cv"
-            android:layout_width="310dp"
+            android:layout_width="match_parent"
             android:layout_height="155dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:cardCornerRadius="4dp"
             app:cardElevation="0dp">
+
         <ImageView
+                android:id="@+id/item_community_ssgsag_news_iv_photo"
+                glideCenterCrop="@{news.photoUrl}"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
     </androidx.cardview.widget.CardView>
@@ -30,6 +39,7 @@
             android:maxLines="2"
             android:ellipsize="end"
             tools:text="네이버, AI로 뉴스 추천 … 사용자 정보 편식 키운다 - 중앙일보news"
+            android:text="@{news.title}"
             />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
