[SSGSAG-199] 상담/수다 리스트 화면 - 엠티뷰 설정
n/a

--- a/app/src/main/res/layout/activity_community_board.xml
+++ b/app/src/main/res/layout/activity_community_board.xml
@@ -95,6 +95,7 @@
                         app:layout_constraintStart_toStartOf="parent"/>
 
                 <LinearLayout
+                        android:id="@+id/act_community_board_ll_empty"
                         android:visibility="visible"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
