--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+                name="vm"
+                type="com.icoo.ssgsag_android.ui.main.community.board.postDetail.BoardPostDetailViewModel" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -64,7 +70,8 @@
             app:layout_constraintTop_toBottomOf="@id/act_board_post_detail_cl_toolbar"
             app:layout_constraintBottom_toTopOf="@+id/act_board_post_detail_cl_write_comment"
             app:layout_constraintStart_toStartOf="parent"
-            android:background="@color/grey_4">
+            android:background="@color/grey_4"
+            android:overScrollMode="never">
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -80,16 +87,45 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_marginHorizontal="24dp">
-                <TextView
+                <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="10dp"
-                        android:textColor="@color/grey_1"
-                        android:letterSpacing="-0.02"
-                        android:gravity="center_horizontal"
-                        tools:text="공모전/대외활동"
-                        android:fontFamily="@font/noto_sans_kr_medium"
-                        android:layout_marginTop="17dp" />
+                        android:orientation="horizontal"
+                        android:layout_marginTop="17dp"
+                        android:gravity="center_vertical">
+                    <androidx.cardview.widget.CardView
+                            cvVisibilityByInt="@{vm.postDetail.isBest}"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            app:cardBackgroundColor="#14fe6d6d"
+                            app:cardElevation="0dp"
+                            app:cardCornerRadius="3dp">
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="1dp"
+                                android:layout_marginBottom="2dp"
+                                android:layout_marginHorizontal="4dp"
+                                android:text="BEST"
+                                android:textSize="10dp"
+                                android:textColor="#fe6d6d"
+                                android:letterSpacing="-0.02" />
+                    </androidx.cardview.widget.CardView>
+
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="10dp"
+                            android:textColor="@color/grey_1"
+                            android:letterSpacing="-0.02"
+                            android:gravity="center_horizontal"
+                            tools:text="공모전/대외활동"
+                            android:fontFamily="@font/noto_sans_kr_medium"
+                            android:layout_marginLeft="4dp"
+                            android:text="@{vm.postDetail.category}"
+                            />
+                </LinearLayout>
+
                 <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -97,7 +133,9 @@
                         android:textColor="@color/black_1"
                         android:letterSpacing="-0.01"
                         tools:text="게시판 제목 / 글자 수 20자 제한"
+                        android:maxLength="20"
                         android:fontFamily="@font/noto_sans_kr_bold"
+                        android:text="@{vm.postDetail.title}"
                         android:layout_marginTop="10dp"/>
                 <LinearLayout
                         android:layout_width="wrap_content"
@@ -108,7 +146,8 @@
                     <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:src="@drawable/profile"/>
+                            android:src="@drawable/profile"
+                            profileImg="@{vm.postDetail.profileUrl}"/>
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -117,7 +156,8 @@
                             android:letterSpacing="-0.02"
                             android:fontFamily="@font/noto_sans_kr_regular"
                             tools:text="파이오오"
-                            android:layout_marginLeft="8dp"/>
+                            android:layout_marginLeft="8dp"
+                            android:text="@{vm.postDetail.userName}"/>
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -125,7 +165,7 @@
                             android:textColor="@color/black_1"
                             android:letterSpacing="-0.02"
                             android:fontFamily="@font/noto_sans_kr_regular"
-                            tools:text=" · " />
+                            android:text=" · " />
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -133,7 +173,8 @@
                             android:textColor="@color/black_1"
                             android:letterSpacing="-0.02"
                             android:fontFamily="@font/noto_sans_kr_regular"
-                            tools:text="3일 전" />
+                            tools:text="3일 전"
+                            android:text="@{vm.postDetail.time}"/>
                 </LinearLayout>
                 <TextView
                         android:layout_width="wrap_content"
@@ -145,6 +186,7 @@
                         android:layout_marginTop="16dp"
                         android:layout_marginBottom="16dp"
                         tools:text="글 내용"
+                        android:text="@{vm.postDetail.description}"
                         />
             </LinearLayout>
 
@@ -170,17 +212,17 @@
                         android:textColor="@color/grey_2"
                         android:letterSpacing="-0.02"
                         android:fontFamily="@font/noto_sans_kr_regular"
-                        tools:text="댓글 3개" />
+                        postDetailCommentNum="@{vm.postDetail.commentCount}" />
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="12dp"
                         android:textColor="@color/grey_2"
                         android:letterSpacing="-0.02"
-                        tools:text="조회수 32회"
                         android:fontFamily="@font/noto_sans_kr_regular"
                         android:layout_marginHorizontal="8dp"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        postDetailViewNum="@{vm.postDetail.viewCount}"/>
 
                 <LinearLayout
                         android:layout_width="104dp"
@@ -199,9 +241,9 @@
                             android:textColor="@color/black_2"
                             android:letterSpacing="-0.02"
                             android:gravity="center_horizontal"
-                            tools:text="공감 31"
                             android:fontFamily="@font/noto_sans_kr_bold"
-                            android:layout_marginLeft="4dp" />
+                            android:layout_marginLeft="4dp"
+                            postDetailLikeNum="@{vm.postDetail.likeNum}"/>
                 </LinearLayout>
             </LinearLayout>
             </LinearLayout>
@@ -210,7 +252,7 @@
                     android:layout_height="8dp"
                     android:background="@color/grey_4"/>
             <TextView
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:id="@+id/act_board_post_detail_tv_no_comment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -220,6 +262,7 @@
                     android:text="등록된 댓글이 없습니다."
                     android:layout_marginLeft="24dp"
                     android:layout_marginTop="11dp"
+                    android:layout_marginBottom="11dp"
                     android:fontFamily="@font/noto_sans_kr_regular"
                     />
 
@@ -263,3 +306,4 @@
                 android:layout_marginRight="15dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
