[SSGSAG-198] 상담/수다 리스트 화면 - 상담/수다 구분
n/a

--- a/app/src/main/res/layout/activity_community_board.xml
+++ b/app/src/main/res/layout/activity_community_board.xml
@@ -30,6 +30,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
+                android:id="@+id/act_community_board_tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
