--- a/app/src/main/res/layout/activity_board_post_detail.xml
+++ b/app/src/main/res/layout/activity_board_post_detail.xml
@@ -35,6 +35,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
+                android:id="@+id/act_board_post_detail_tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
